Half header done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>landing-page-html-and-css</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <section class="header">
+            <div class="container">
+                <img src="6.jpg">
+                <div class="top-left">
+                    <strong>Air University</strong>
+                    <div id="Nav">
+                        <span class="Span">Home</span>
+                        <span class="Span">Product</span>
+                        <span class="Span">Pricing</span>
+                        <span class="Span">Contact</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
