addition to header and main body

--- a/index.html
+++ b/index.html
@@ -3,22 +3,99 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>landing-page-html-and-css</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Document</title><link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section class="header">
+        <header id=" main-header">
             <div class="container">
-                <img src="6.jpg">
+                <img src="6.jpg" alt>
                 <div class="top-left">
-                    <strong>Air University</strong>
-                    <div id="Nav">
-                        <span class="Span">Home</span>
-                        <span class="Span">Product</span>
-                        <span class="Span">Pricing</span>
-                        <span class="Span">Contact</span>
-                    </div>
+                    <span class="heading"><a href><h1>Air University</h1></a></span>
+                    <span class="nav-bar">
+                        <a href>Home</a>
+                        <a href>About</a>
+                        <a href>Contact</a>
+                    </span>
                 </div>
+                <div class="top-right">
+                    <button>Login &#x2709;</button>
+                    <button>
+                        Join Us &#8594;
+                    </button>
+                </div>
+                <div class="centered">
+                    <span id="small">
+                        <small style="font-size: 10px;">FOR BETTER FUTURE!</small>
+                    </span>
+                    <span id="content">
+                        <h1>HIGH QULITY </h1>
+                        <h1 style="text-align: center;">COURSES</h1>
+                    </span>
+                    <span class="text">
+                        <h6>
+                            Find The Right Instructor For You Over 10000
+                            Teacher.
+                        </h6>
+                    </span>
+                    <span id="but">
+                        <button style border-radius: 5%";">
+                            Join Us &#8594;
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </header>
+
+        <section class="main-section">
+            <div class="main-container">
+                <span>
+                    <small style="font-size: 15px;"> Pactice Advice</small>
+                    <h1 style="margin-top: 20px;">Appordable Packages</h1>
+                    <p style="margin-top: 15px;">Problems trying to resolve the
+                        conflit between</p>
+                    <p> the two major realms of Classical physics: Newtonain
+                        mechains</p>
+                </span>
+
+                <div class="box">
+                    <div class="icon">
+                        <img src="mood-board.png" alt>
+                    </div>
+                    <h3>Certified Teacher</h3>
+                    <hr>
+                    <p>The Gradual accumlation of information about</p>
+                </div>
+
+                <div class="box">
+                    <div class="icon"><img src="study.png" alt> </div>
+                    <h3>2,769 Online Courses</h3>
+                    <hr>
+                    <p>The Gradual accumlation of information about</p>
+                </div>
+
+                <div class="box">
+                    <div class="icon">
+                        <img src="mood-board.png" alt>
+                    </div>
+                    <h3>Certified Teacher</h3>
+                    <hr>
+                    <p>The Gradual accumlation of information about</p>
+                </div>
+
+                <div class="box">
+                    <div class="icon">
+                        <img src="study.png" alt>
+                    </div>
+                    <h3>Lifetime Access</h3>
+                    <hr>
+                    <p>The Gradual accumlation of information about</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="QULITY">
+            <div class="container-1">
+                
             </div>
         </section>
     </body>
