Testmonioal added and techer section also

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title><link rel="stylesheet" href="style.css">
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header id=" main-header">
@@ -63,14 +66,16 @@
                     </div>
                     <h3>Certified Teacher</h3>
                     <hr>
-                    <p>The Gradual accumlation of information about</p>
+                    <p style="text-align: center;">The Gradual accumlation of
+                        information about</p>
                 </div>
 
                 <div class="box">
                     <div class="icon"><img src="study.png" alt> </div>
                     <h3>2,769 Online Courses</h3>
                     <hr>
-                    <p>The Gradual accumlation of information about</p>
+                    <p style="text-align: center;">The Gradual accumlation of
+                        information about</p>
                 </div>
 
                 <div class="box">
@@ -79,7 +84,8 @@
                     </div>
                     <h3>Certified Teacher</h3>
                     <hr>
-                    <p>The Gradual accumlation of information about</p>
+                    <p style="text-align: center;">The Gradual accumlation of
+                        information about</p>
                 </div>
 
                 <div class="box">
@@ -88,14 +94,77 @@
                     </div>
                     <h3>Lifetime Access</h3>
                     <hr>
-                    <p>The Gradual accumlation of information about</p>
+                    <p style="text-align: center;">The Gradual accumlation of
+                        information about</p>
                 </div>
             </div>
         </section>
 
         <section class="QULITY">
             <div class="container-1">
-                
+                <div class="image">
+                    <img style="display: flex height 100px ;" src="3.jpg" alt>
+                </div>
+                <div class="introduction-1">
+                    <div class="main-box">
+                        <hr>
+                        <h1 style="padding-bottom: 10px;">Get Quality Education!</h1>
+                        <em style="text-align: center;">
+                            Lorem ipsum, dolor sit amet consectetur <br>
+                            adipisicing elit Esse, ut unde repudiandae ad, <br>
+                            asperiores impedit quibusdam illo.</em><br>
+                        <button class="btn">Learn More &#x3e;</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="Testimonials">
+            <div class="container-2">
+                <span>
+                    <small style="font-size: 15px;"> Testimonials</small>
+                    <h1 style="margin-top: 20px;">Our Experts Teacher</h1>
+                    <p style="margin-top: 15px;">Problems trying to resolve the
+                        conflit between</p>
+                    <p> the two major realms of Classical physics: Newtonain
+                        mechains</p>
+                </span>
+
+                <div class="Testimonialsbox">
+                    <div class="testimage">
+                        <img src="4.jpg" alt>
+                    </div>
+
+                    <p style="text-align: center;">The Gradual accumlation of
+                        information about <br> The
+                        accumlation of information </p>
+                    <div class="star">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <h5>Taskin Jehan</h5>
+                    <small>Coder</small>
+
+                </div>
+
+                <div class="Testimonialsbox">
+                    <div class="testimage"><img src="7.jpg" alt> </div>
+                    <p style="text-align: center;">The Gradual accumlation of
+                        information about <br> The
+                        accumlation of information </p>
+                    <div class="star">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <h5>Jawad Ali</h5>
+                    <small>Developer</small>
+                </div>
+
             </div>
         </section>
     </body>
